--- a/world.html
+++ b/world.html
@@ -8,6 +8,16 @@
 </head>
 <body>
     <div id="world"></div>
+    <footer>
+        <p id="message">Start playing to have items!</p>
+        <div id="game-tools-container">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+    </footer>
     <script src="./world.js"></script>
 </body>
 </html>
