--- a/world.html
+++ b/world.html
@@ -11,12 +11,13 @@
     <footer>
         <p id="message">Start playing to have items!</p>
         <div id="game-tools-container">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <img src="./cache.png" alt="">
+            <img src="./items/iron_axe.png" alt="" class="game-tool">
+            <img src="./items/iron_pickaxe.png" alt="" class="game-tool">
+            <img src="./items/iron_shovel.png" alt="" class="game-tool">
+            <img src="./items/iron_sword.png" alt="" class="game-tool">
         </div>
+        <button id="reset-btn">Reset Game</button>
     </footer>
     <script src="./world.js"></script>
 </body>
