--- a/world.html
+++ b/world.html
@@ -9,13 +9,13 @@
 <body>
     <div id="world"></div>
     <footer>
-        <p id="message">Start playing to have items!</p>
+        <p id="cache-area">Start playing to have items!</p>
         <div id="game-tools-container">
-            <img src="./cache.png" alt="">
-            <img src="./items/iron_axe.png" alt="" class="game-tool">
-            <img src="./items/iron_pickaxe.png" alt="" class="game-tool">
-            <img src="./items/iron_shovel.png" alt="" class="game-tool">
-            <img src="./items/iron_sword.png" alt="" class="game-tool">
+            <img src="./cache.png" alt="cache" class="cache-img" id="cache-img">
+            <img src="./items/iron_axe.png" alt="axe" class="game-tool">
+            <img src="./items/iron_pickaxe.png" alt="pickaxe" class="game-tool">
+            <img src="./items/iron_shovel.png" alt="shovel" class="game-tool">
+            <img src="./items/iron_sword.png" alt="sword" class="game-tool">
         </div>
         <button id="reset-btn">Reset Game</button>
     </footer>
