--- a/world.html
+++ b/world.html
@@ -9,7 +9,7 @@
 <body>
     <div id="world"></div>
     <footer>
-        <p id="cache-area">Start playing to have items!</p>
+        <div id="cache-area" class="cache-area-start">Start playing to have items!</div>
         <div id="game-tools-container">
             <img src="./cache.png" alt="cache" class="cache-img" id="cache-img">
             <img src="./items/iron_axe.png" alt="axe" class="game-tool">
