--- a/world.html
+++ b/world.html
@@ -11,11 +11,11 @@
     <footer>
         <div id="cache-area" class="cache-area-start">Start playing to have items!</div>
         <div id="game-tools-container">
-            <img src="./cache.png" alt="cache" class="cache-img" id="cache-img">
-            <img src="./items/iron_axe.png" alt="axe" class="game-tool">
-            <img src="./items/iron_pickaxe.png" alt="pickaxe" class="game-tool">
-            <img src="./items/iron_shovel.png" alt="shovel" class="game-tool">
-            <img src="./items/iron_sword.png" alt="sword" class="game-tool">
+            <img src="./images/cache.png" alt="cache" class="cache-img" id="cache-img">
+            <img src="./images/iron_axe.png" alt="axe" class="game-tool">
+            <img src="./images/iron_pickaxe.png" alt="pickaxe" class="game-tool">
+            <img src="./images/iron_shovel.png" alt="shovel" class="game-tool">
+            <img src="./images/iron_sword.png" alt="sword" class="game-tool">
         </div>
         <button id="reset-btn">Reset Game</button>
     </footer>
